--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "reselect": "4.1.8",
     "stacktrace-js": "2.0.2",
     "typescript": "5.7.2",
+    "use-debounce": "10.0.4",
     "zustand": "5.0.3"
   },
   "devDependencies": {
